<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main_activity_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/day_and_night_transition"
        app:layoutDescription="@xml/activity_main_scene" >

        <TextView
            android:id="@+id/title"
            style="@style/Text.H1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/researchers_night_name"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            tools:layout_editor_absoluteY="40dp" />

        <com.esspresso.nocnaukowcwpk.views.MoonView
            android:id="@+id/moon_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_horizontal_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_horizontal_2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_horizontal_3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <include
            android:id="@+id/map_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guide_horizontal_2"
            app:layout_constraintEnd_toStartOf="@+id/guide_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_horizontal_1" />

        <include
            android:id="@+id/scanner_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guide_horizontal_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guide_vertical"
            app:layout_constraintTop_toTopOf="@id/guide_horizontal_1" />

        <include
            android:id="@+id/qr_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guide_horizontal_3"
            app:layout_constraintEnd_toEndOf="@id/guide_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_horizontal_2" />

        <include
            android:id="@+id/event_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guide_horizontal_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_vertical"
            app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_2" />

        <include
            android:id="@+id/profile_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_3" />

        <include
            android:id="@+id/info_square"
            layout="@layout/menu_item_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guide_vertical"
            app:layout_constraintTop_toBottomOf="@id/guide_horizontal_3" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/toolbar_height"
            android:elevation="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>