...
            name="statusModel"
            type="com.esspresso.nocnaukowcwpk.status.StatusModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
...
