<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/startState">
        <Constraint android:id="@+id/scan_image">
            <CustomAttribute
                app:attributeName="colorFilter"
                app:customColorValue="@android:color/black" />
        </Constraint>
    </ConstraintSet>

...
