...
        <variable
            name="items"
            type="ArrayList&lt;com.esspresso.nocnaukowcwpk.questions.ItemCategoryModel>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_name"
            style="@style/Text.Black"
...
